Add missing break statement for case elfcpp::R_X86_64_PLTOFF64.

gold/
	PR gold/16870
	* x86_64.cc (Target_x86_64::Relocate::relocate): Add missing break.